--- a/src/static/assets/style/application.css
+++ b/src/static/assets/style/application.css
@@ -10,6 +10,11 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+	background-image: url(../images/coffee-beans.png);
+	background-origin: context-box;
+	background-position: bottom left;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
 
 div.center {
@@ -56,14 +61,6 @@ button.nav-button {
     font-family: arial, helvetica, sans-serif;
     color: white;
     cursor: pointer;
-}
-
-div.background {
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	z-index: -100;
-	opacity: 0.5;
 }
 
 /* Footer */
